--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             <div class="projects-grid">
                 <!-- Проект 1 -->
                 <div class="project-card" onclick="window.location.href='project1.html'">
-                    <div class="project-img" style="background-image: url('img/ataka_chit.jpg')">
+                    <div class="project-img" style="background-image: url('https://i.ibb.co/0jPnsQTL/ataka-chit.jpg')">
                         <button class="banner-btn" onclick="event.stopPropagation(); window.location.href='project1.html'">
                             <i class="fas fa-play"></i>
                             Смотреть сериал
@@ -542,7 +542,7 @@
                 
                 <!-- Проект 2 -->
                 <div class="project-card" onclick="window.location.href='project2.html'">
-                    <div class="project-img" style="background-image: url('https://i.ibb.co/zWG8dsCV/420449823-1410779652864718-2298684350824818122-n.jpg')">
+                    <div class="project-img" style="background-image: url('https://i.ibb.co/nNw9XFby/Picsart-25-11-09-18-26-52-361.jpg')">
                         <button class="banner-btn" onclick="event.stopPropagation(); window.location.href='project2.html'">
                             <i class="fas fa-play"></i>
                             Смотреть сериал
@@ -560,7 +560,7 @@
                 
                 <!-- Проект 3 -->
                 <div class="project-card" onclick="window.location.href='project3.html'">
-                    <div class="project-img" style="background-image: url('img/litvin.png')">
+                    <div class="project-img" style="background-image: url('https://i.ibb.co/N2GKXPNZ/Picsart-25-11-08-22-54-37-882.png')">
                         <button class="banner-btn" onclick="event.stopPropagation(); window.location.href='project3.html'">
                             <i class="fas fa-play"></i>
                             Смотреть сериал
