--- a/project3.html
+++ b/project3.html
@@ -677,7 +677,7 @@
                             <i class="fas fa-play"></i>
                             Смотреть серии
                         </a>
-                        <a href="index.html" class="btn btn-outline">
+                        <a href="index.html#projects" class="btn btn-outline">
                             <i class="fas fa-arrow-left"></i>
                             Назад к проектам
                         </a>
