--- a/project4.html
+++ b/project4.html
@@ -1045,8 +1045,8 @@
                         <div class="status-badge in-progress">В разработке</div>
                     </div>
                     <div class="episode-info">
-                        <h3>Серия 1: Начало проекта</h3>
-                        <p>Тесла создаёт своё величайшее изобретение.</p>
+                        <h3>Серия 1: Без названия</h3>
+                        <p>Описание отсутсвует.</p>
                         <div class="episode-meta">
                             <span>--:--</span>
                             <span class="status-badge in-progress">В разработке</span>
@@ -1061,8 +1061,8 @@
                         <div class="status-badge in-progress">В разработке</div>
                     </div>
                     <div class="episode-info">
-                        <h3>Серия 2: Предательство</h3>
-                        <p>Эйнштейн крадёт проект Теслы.</p>
+                        <h3>Серия 2: Без названия</h3>
+                        <p>Описание отсутсвует.</p>
                         <div class="episode-meta">
                             <span>--:--</span>
                             <span class="status-badge in-progress">В разработке</span>
@@ -1077,8 +1077,8 @@
                         <div class="status-badge in-progress">В разработке</div>
                     </div>
                     <div class="episode-info">
-                        <h3>Серия 3: Сила молнии</h3>
-                        <p>Эйнштейн получает невероятную силу.</p>
+                        <h3>Серия 3: Без названия</h3>
+                        <p>Описание отсутсвует.</p>
                         <div class="episode-meta">
                             <span>--:--</span>
                             <span class="status-badge in-progress">В разработке</span>
@@ -1093,8 +1093,8 @@
                         <div class="status-badge in-progress">В разработке</div>
                     </div>
                     <div class="episode-info">
-                        <h3>Серия 4: Погоня</h3>
-                        <p>Тесла начинает охоту на Эйнштейна.</p>
+                        <h3>Серия 4: Без названия</h3>
+                        <p>Описание отсутсвует.</p>
                         <div class="episode-meta">
                             <span>--:--</span>
                             <span class="status-badge in-progress">В разработке</span>
@@ -1109,8 +1109,8 @@
                         <div class="status-badge in-progress">В разработке</div>
                     </div>
                     <div class="episode-info">
-                        <h3>Серия 5: Схватка титанов</h3>
-                        <p>Первая битва гениальных учёных.</p>
+                        <h3>Серия 5: Без названия</h3>
+                        <p>Описание отсутсвует.</p>
                         <div class="episode-meta">
                             <span>--:--</span>
                             <span class="status-badge in-progress">В разработке</span>
@@ -1125,8 +1125,8 @@
                         <div class="status-badge in-progress">В разработке</div>
                     </div>
                     <div class="episode-info">
-                        <h3>Серия 6: Финал</h3>
-                        <p>Решающая битва за контроль над энергией.</p>
+                        <h3>Серия 6: Без названия</h3>
+                        <p>Описание отсутсвует.</p>
                         <div class="episode-meta">
                             <span>--:--</span>
                             <span class="status-badge in-progress">В разработке</span>
