--- a/project2.html
+++ b/project2.html
@@ -1031,6 +1031,86 @@
                         </div>
                     </div>
                 </div>
+
+                                <!-- Серия 5 (В разработке) -->
+                <div class="episode-card">
+                    <div class="episode-img" style="background-image: url('img/kondicii.jpg')"></div>
+                    <div class="episode-overlay">
+                        <div class="status-badge in-progress">В разработке</div>
+                    </div>
+                    <div class="episode-info">
+                        <h3>Серия 5: Без названия</h3>
+                        <p>Скоро...</p>
+                        <div class="episode-meta">
+                            <span>--:--</span>
+                            <span class="status-badge in-progress">В разработке</span>
+                        </div>
+                    </div>
+                </div>
+ 
+                                <!-- Серия 6 (В разработке) -->
+                <div class="episode-card">
+                    <div class="episode-img" style="background-image: url('img/kondicii.jpg')"></div>
+                    <div class="episode-overlay">
+                        <div class="status-badge in-progress">В разработке</div>
+                    </div>
+                    <div class="episode-info">
+                        <h3>Серия 6: Без названия</h3>
+                        <p>Скоро...</p>
+                        <div class="episode-meta">
+                            <span>--:--</span>
+                            <span class="status-badge in-progress">В разработке</span>
+                        </div>
+                    </div>
+                </div>
+ 
+                                <!-- Серия 7 (В разработке) -->
+                <div class="episode-card">
+                    <div class="episode-img" style="background-image: url('img/kondicii.jpg')"></div>
+                    <div class="episode-overlay">
+                        <div class="status-badge in-progress">В разработке</div>
+                    </div>
+                    <div class="episode-info">
+                        <h3>Серия 7: Без названия</h3>
+                        <p>Скоро...</p>
+                        <div class="episode-meta">
+                            <span>--:--</span>
+                            <span class="status-badge in-progress">В разработке</span>
+                        </div>
+                    </div>
+                </div>
+ 
+                                <!-- Серия 8 (В разработке) -->
+                <div class="episode-card">
+                    <div class="episode-img" style="background-image: url('img/kondicii.jpg')"></div>
+                    <div class="episode-overlay">
+                        <div class="status-badge in-progress">В разработке</div>
+                    </div>
+                    <div class="episode-info">
+                        <h3>Серия 8: Без названия</h3>
+                        <p>Скоро...</p>
+                        <div class="episode-meta">
+                            <span>--:--</span>
+                            <span class="status-badge in-progress">В разработке</span>
+                        </div>
+                    </div>
+                </div>
+ 
+                                <!-- Серия 9 (В разработке) -->
+                <div class="episode-card">
+                    <div class="episode-img" style="background-image: url('img/kondicii.jpg')"></div>
+                    <div class="episode-overlay">
+                        <div class="status-badge in-progress">В разработке</div>
+                    </div>
+                    <div class="episode-info">
+                        <h3>Серия 9: Без названия</h3>
+                        <p>Скоро...</p>
+                        <div class="episode-meta">
+                            <span>--:--</span>
+                            <span class="status-badge in-progress">В разработке</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
